--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
   },
   "devDependencies": {},
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "jest",
     "start": "node server.js"
   },
   "repository": {
@@ -22,4 +22,6 @@
     "url": "https://github.com/AnjinIsmail/zookeeper/issues"
   },
   "homepage": "https://github.com/AnjinIsmail/zookeeper#readme"
+
 }
+
